# backend/transaction/gen/swagger.yaml
@@ -1,6 +1,6 @@
 basePath: /transaction
 consumes:
-- application/json
+  - application/json
 definitions:
   Address:
     description: Address follows the GeoJSON Point format (https://en.wikipedia.org/wiki/GeoJSON)
@@ -40,9 +40,9 @@ definitions:
     description: We can understand it as a Command. It is used in CREATE operations.
     properties:
       address:
-        $ref: '#/definitions/Address'
+        $ref: "#/definitions/Address"
       coverageArea:
-        $ref: '#/definitions/CoverageArea'
+        $ref: "#/definitions/CoverageArea"
       document:
         type: string
         x-go-name: Document
@@ -65,9 +65,9 @@ definitions:
     description: including its coordinates represented by the coverageArea and address fields.
     properties:
       address:
-        $ref: '#/definitions/Address'
+        $ref: "#/definitions/Address"
       coverageArea:
-        $ref: '#/definitions/CoverageArea'
+        $ref: "#/definitions/CoverageArea"
       document:
         description: Document is a unique field
         type: string
@@ -82,7 +82,7 @@ definitions:
       tradingName:
         type: string
         x-go-name: TradingName
-    title: Sales represents a collection of identification data of a Zé Delivery Sales,
+    title: Sales represents a collection of identification data of a Hubla Sales,
     type: object
     x-go-package: github.com/Ralphbaer/hubla/transaction/entity
   ResponseError:
@@ -108,14 +108,14 @@ definitions:
         type: integer
         x-go-name: Code
       fields:
-        $ref: '#/definitions/FieldValidations'
+        $ref: "#/definitions/FieldValidations"
       message:
         type: string
         x-go-name: Message
     type: object
     x-go-package: github.com/Ralphbaer/hubla/common/net/http
 info:
-  description: This guide describes all Zé Delivery Sales API and usecase.
+  description: This guide describes all Hubla Sales API and usecase.
   title: Sales API.
   version: 0.0.1
 paths:
@@ -124,18 +124,18 @@ paths:
       description: Register a new Sales into database
       operationId: Create
       parameters:
-      - description: The payload
-        in: body
-        name: input
-        required: true
-        schema:
-          $ref: '#/definitions/CreateSalesInput'
-        type: string
+        - description: The payload
+          in: body
+          name: input
+          required: true
+          schema:
+            $ref: "#/definitions/CreateSalesInput"
+          type: string
       responses:
         "201":
           description: Success Operation
           schema:
-            $ref: '#/definitions/Sales'
+            $ref: "#/definitions/Sales"
         "400":
           description: Invalid Input - Input has invalid/missing values
           examples:
@@ -143,7 +143,7 @@ paths:
               code: 400
               message: message
           schema:
-            $ref: '#/definitions/ValidationError'
+            $ref: "#/definitions/ValidationError"
         "409":
           description: Conflict - transaction document already taken
           examples:
@@ -151,26 +151,26 @@ paths:
               code: 409
               message: message
           schema:
-            $ref: '#/definitions/ResponseError'
+            $ref: "#/definitions/ResponseError"
       security:
-      - Definitions: []
+        - Definitions: []
       tags:
-      - transaction
+        - transaction
   /transaction/{id}:
     get:
       description: Returns an transaction by its id
       operationId: GetByID
       parameters:
-      - description: The id of the transaction
-        in: path
-        name: id
-        required: true
-        type: string
+        - description: The id of the transaction
+          in: path
+          name: id
+          required: true
+          type: string
       responses:
         "200":
           description: Success Operation
           schema:
-            $ref: '#/definitions/Sales'
+            $ref: "#/definitions/Sales"
         "404":
           description: Not Found - Resource does not exists
           examples:
@@ -178,29 +178,29 @@ paths:
               code: 404
               message: message
           schema:
-            $ref: '#/definitions/ResponseError'
+            $ref: "#/definitions/ResponseError"
       tags:
-      - transaction
+        - transaction
   /transaction/nearest:
     get:
       description: Returns a transaction given coordinates longitude and latitude
       operationId: GetNearestSales
       parameters:
-      - description: Longitude
-        in: query
-        name: long
-        required: true
-        type: integer
-      - description: Latitude
-        in: query
-        name: lat
-        required: true
-        type: integer
+        - description: Longitude
+          in: query
+          name: long
+          required: true
+          type: integer
+        - description: Latitude
+          in: query
+          name: lat
+          required: true
+          type: integer
       responses:
         "200":
           description: Success Operation
           schema:
-            $ref: '#/definitions/Sales'
+            $ref: "#/definitions/Sales"
         "404":
           description: Not Found - Resource does not exists
           examples:
@@ -208,19 +208,19 @@ paths:
               code: 404
               message: message
           schema:
-            $ref: '#/definitions/ResponseError'
+            $ref: "#/definitions/ResponseError"
       tags:
-      - transaction
+        - transaction
 produces:
-- application/json
+  - application/json
 schemes:
-- http
-- https
+  - http
+  - https
 swagger: "2.0"
 x-meta-array:
-- value1
-- value2
+  - value1
+  - value2
 x-meta-array-obj:
-- name: obj
-  value: field
+  - name: obj
+    value: field
 x-meta-value: value
